--- a/page.html
+++ b/page.html
@@ -13,7 +13,7 @@
       <a href="/page.html" aria-current="page">Other page</a>
     </nav>
     <main>
-      <h1>My other page</h1>
+      <h1 id="content"></h1>
     </main>
   </body>
 </html>
