--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <main>
-      <h1>WeLcome to Cool Readme!</h1>
+      <h1>Welcome to Cool Readme!</h1>
+      <p></p>
     </main>
   </body>
 </html>
