--- a/page.html
+++ b/page.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <link rel="stylesheet" href="default.css" />
     <script type="module" src="script.js" defer></script>
   </head>
   <body>
