--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="default.css" />
   </head>
   <body>
     <main>
       <h1>Welcome to Cool Readme!</h1>
-      <p></p>
+      <p>Turn your readme into a webpage!</p>
     </main>
   </body>
 </html>
