--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <main>
       <h1>Welcome to Cool Readme!</h1>
-      <p>Turn your readme into a webpage!</p>
+      <h2>Turn your readme into a webpage!</h2>
+      <p>To see your readme, enter your github username</p>
+      <input type="text" id="" />
     </main>
   </body>
 </html>
