1 file modified, 1 added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="default.css" />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <main style="text-align: center">
