--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="default.css" />
     <link rel="stylesheet" href="main.css" />
+    <link rel="shortcut icon" href="markdown.svg" type="image/x-icon" />
   </head>
   <body>
     <main style="text-align: center">
