--- a/page.html
+++ b/page.html
@@ -11,6 +11,7 @@
       referrerpolicy="no-referrer"
     ></script>
     <link rel="stylesheet" href="default.css" />
+    <link rel="shortcut icon" href="markdown.svg" type="image/x-icon" />
     <script type="module" src="script.js" defer></script>
   </head>
   <body>
