--- a/page.html
+++ b/page.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <main>
-      <h1 id="userName"></h1>
+      <u><h1 id="userName"></h1></u>
       <div id="content"></div>
     </main>
   </body>
