--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
     <main style="text-align: center">
       <h1 id="title">Cool Readme!</h1>
       <h2>Turn your readme into a webpage!</h2>
-      <p>To see your readme, enter your github username</p>
+      <p>
+        To see your readme, enter your github username, to tryout custom css,
+        head to the <a href="editor.html">CSS editor</a>
+      </p>
       <input type="text" id="user" placeholder="..." /><br /><br />
       <button onclick="send()" id="send">Check it out!</button>
     </main>
     <footer>
       <p>
+        Star us on
+        <a href="https://github.com/VatsaDev/coolMD"
+          >Github <strong>☆</strong></a
+        ><br />
         Copyright Vatsa 2023-<span id="copy"></span>, all rights reserved.
         <br />
-        Star us on <a href="https://github.com/VatsaDev/coolMD">Github</a>
-        <strong>ˏˋ ☆ ˎˊ</strong>
       </p>
       <br /><br />
     </footer>
