--- a/page.html
+++ b/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Other page</title>
+    <title>view</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <script
